[package]
name = "threadid-benchmarks"
description = "Benchmarks for the threadid crate"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Techcable/threadid.rs"
publish = false  # internal use only
edition = "2021"

[dev-dependencies]
threadid.path = ".."
criterion = "0.7"
crossbeam-utils = "0.8"

[[bench]]
name = "access"
required-features = []
harness = false
test = false
